Refactor Timesheet Service: Enhance reporting and validation features
- Updated ReportService to return paginated results for total hours by commessa and employee.
- Introduced CommessaHoursDTO and EmployeeTotalHoursDTO for better data handling.
- Enhanced TimesheetDayService to support pagination and improved item management.
- Added TimesheetValidator for business rule validation on timesheets.
- Implemented logging for better traceability in TimesheetItemService and TimesheetDayService.
- Created new DTOs for detailed reporting on commessa and employee hours.
- Improved error handling with custom TimesheetValidationException.