@@ -1,91 +1,72 @@
 package com.brt.TimesheetService.service;
-
-import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import com.brt.TimesheetService.dto.CommessaHoursDTO;
 import com.brt.TimesheetService.dto.DailyHoursReportDTO;
-import com.brt.TimesheetService.dto.ReportHoursDTO;
+import com.brt.TimesheetService.dto.EmployeeTotalHoursDTO;
+import com.brt.TimesheetService.dto.ReportDTOs.EmployeeCommessaHoursDTO;
 import com.brt.TimesheetService.repository.TimesheetItemRepository;
 
 @Service
 public class ReportService {
-
     private final TimesheetItemRepository timesheetItemRepository;
 
     public ReportService(TimesheetItemRepository timesheetItemRepository) {
         this.timesheetItemRepository = timesheetItemRepository;
     }
 
-    /**
-     * Ore totali per tutte le commesse (aggregato globale)
-     */
-    public List<ReportHoursDTO> getTotalHoursByCommessa() {
-        List<Object[]> results = timesheetItemRepository.aggregateHoursByCommessa();
+    // Ore totali per commessa
+    public Page<CommessaHoursDTO> getTotalHoursByCommessa(LocalDate startDate, LocalDate endDate, Pageable pageable) {
+        Page<CommessaHoursDTO> commessaPage = timesheetItemRepository.aggregateHoursByCommessa(startDate, endDate, pageable);
 
-        return results.stream()
-                        .map(row -> ReportHoursDTO.forCommessa(
-                                ((Number) row[0]).longValue(),        // commessaId
-                                row[1] != null ? row[1].toString() : null, // commessaCode
-                                row[2] != null ? row[2].toString() : null, // commessaName
-                                ((BigDecimal) row[3])                 // totalHours
-                        ))
-                        .collect(Collectors.toList());
+        // For each commessa, fetch distinct employee names for that commessa and period
+        List<CommessaHoursDTO> enrichedList = commessaPage.getContent().stream().map(commessaDTO -> {
+            List<String> employeeNames = timesheetItemRepository.findDistinctEmployeeNamesByCommessaAndDate(
+                commessaDTO.getCommessaId(), startDate, endDate
+            );
+            return new CommessaHoursDTO(
+                commessaDTO.getCommessaId(),
+                commessaDTO.getCommessaCode(),
+                commessaDTO.getTotalHours(),
+                employeeNames
+            );
+        }).toList();
+
+        return new org.springframework.data.domain.PageImpl<>(enrichedList, pageable, commessaPage.getTotalElements());
     }
 
-    /**
-     * Ore totali per dipendente (aggregato globale)
-     */
-    public List<ReportHoursDTO> getTotalHoursByEmployee() {
-        List<Object[]> results = timesheetItemRepository.aggregateHoursByEmployee();
-
-        return results.stream()
-                .map(row -> ReportHoursDTO.forEmployee(
-                        ((Number) row[0]).longValue(),      // employeeId
-                        (String) row[1],                     // employeeName
-                        ((BigDecimal) row[2])                // totalHours
-                ))
-                .collect(Collectors.toList());
-    }
-
-    /**
-     *  per ogni commessa, la lista di ogni dipendente quante ora vi ha dedicato giorno per giorno
-     */
-    public List<DailyHoursReportDTO> getDailyHoursByCommessa(Long commessaId) {
-        return timesheetItemRepository.aggregateDailyHoursByCommessa(commessaId)
-                .stream()
-                .map(row -> DailyHoursReportDTO.builder()
-                        .date((LocalDate) row[0])
-                        .employeeId(((Number) row[1]).longValue())
-                        .employeeName((String) row[2])
-                        .commessaId(((Number) row[3]).longValue())
-                        .commessaCode((String) row[4])
-                        .commessaName((String) row[5])
-                        .hours((BigDecimal) row[6])
-                        .build())
-                .collect(Collectors.toList());
-    }
-
-    /**
-     *  per ogni dipendente, la lista di ogni commessa quante ore vi ha dedicato giorno per giorno
-     */
-    public List<DailyHoursReportDTO> getDailyHoursByEmployee(Long employeeId) {
-        return timesheetItemRepository.aggregateDailyHoursByEmployee(employeeId)
-                .stream()
-                .map(row -> DailyHoursReportDTO.builder()
-                        .date((LocalDate) row[0])
-                        .employeeId(((Number) row[1]).longValue())
-                        .employeeName((String) row[2])
-                        .commessaId(((Number) row[3]).longValue())
-                        .commessaCode((String) row[4])
-                        .commessaName((String) row[5])
-                        .hours((BigDecimal) row[6])
-                        .build())
-                .collect(Collectors.toList());
+    // Ore totali per dipendente
+    public Page<EmployeeTotalHoursDTO> getTotalHoursByEmployee(Pageable pageable) {
+        return timesheetItemRepository.aggregateHoursByEmployee(pageable);
     }
 
 
+    public Page<DailyHoursReportDTO> getReportGroupedByCommessaOptimized(LocalDate startDate, LocalDate endDate, Pageable pageable) {
+        return timesheetItemRepository.aggregateDailyHoursAllCommesseByDate(startDate, endDate, pageable);
+    }
+
+    public Page<DailyHoursReportDTO> getReportForSingleCommessa(String commessaCode, LocalDate startDate, LocalDate endDate, Pageable pageable) {
+        return timesheetItemRepository.aggregateDailyHoursByCommessaAndDate(commessaCode, startDate, endDate, pageable);
+    }
+
+    
+    public Page<EmployeeCommessaHoursDTO> getEmployeeHoursForCommessa(Long employeeId, String commessaCode, LocalDate startDate, LocalDate endDate, Pageable pageable) {
+        return timesheetItemRepository.getHoursByEmployeeAndCommessa(employeeId, commessaCode, startDate, endDate, pageable);
+    }
+
+    public Page<EmployeeCommessaHoursDTO> getEmployeeHoursAllCommesse(Long employeeId, LocalDate startDate, LocalDate endDate, Pageable pageable) {
+        return timesheetItemRepository.getHoursByEmployeeAllCommesse(employeeId, startDate, endDate, pageable);
+    }
+
+    /**
+     * Restituisce il totale ore per ogni commessa a cui ha partecipato un dipendente in un periodo.
+     */
+    public Page<EmployeeTotalHoursDTO> getTotalHoursByCommessaForEmployee(Long employeeId, LocalDate startDate, LocalDate endDate, Pageable pageable) {
+        return timesheetItemRepository.getTotalHoursByCommessaForEmployee(employeeId, startDate, endDate, pageable);
+    }
 }
